0.8.0/_sources/generated/statsmodels.tsa.statespace.varmax.VARMAX.rst.txt
statsmodels.tsa.statespace.varmax.VARMAX
========================================

.. currentmodule:: statsmodels.tsa.statespace.varmax

.. autoclass:: VARMAX

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~VARMAX.filter
    
    
      ~VARMAX.fit
    
    
      ~VARMAX.from_formula
    
    
      ~VARMAX.hessian
    
    
      ~VARMAX.impulse_responses
    
    
      ~VARMAX.information
    
    
      ~VARMAX.initialize
    
    
      ~VARMAX.initialize_approximate_diffuse
    
    
      ~VARMAX.initialize_known
    
    
      ~VARMAX.initialize_statespace
    
    
      ~VARMAX.initialize_stationary
    
    
      ~VARMAX.loglike
    
    
      ~VARMAX.loglikeobs
    
    
      ~VARMAX.observed_information_matrix
    
    
      ~VARMAX.opg_information_matrix
    
    
      ~VARMAX.predict
    
    
      ~VARMAX.prepare_data
    
    
      ~VARMAX.score
    
    
      ~VARMAX.score_obs
    
    
      ~VARMAX.set_conserve_memory
    
    
      ~VARMAX.set_filter_method
    
    
      ~VARMAX.set_inversion_method
    
    
      ~VARMAX.set_smoother_output
    
    
      ~VARMAX.set_stability_method
    
    
      ~VARMAX.simulate
    
    
      ~VARMAX.smooth
    
    
      ~VARMAX.transform_jacobian
    
    
      ~VARMAX.transform_params
    
    
      ~VARMAX.untransform_params
    
    
      ~VARMAX.update
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~VARMAX.endog_names
      ~VARMAX.exog_names
      ~VARMAX.initial_variance
      ~VARMAX.initialization
      ~VARMAX.loglikelihood_burn
      ~VARMAX.param_names
      ~VARMAX.start_params
      ~VARMAX.tolerance
   
   